--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "panda-www",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "build/server.js",
   "scripts": {
     "build": "babel server.js -d build",
     "start": "nodemon --exec babel-node --presets es2015 server.js"
