--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "build/server.js",
   "scripts": {
     "build": "babel server.js -d build",
-    "start": "build/server.js",
+    "start": "node build/server.js",
     "dev": "nodemon --exec babel-node --presets es2015 server.js"
   },
   "babel": {
