--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "virtu-www",
   "version": "1.0.0",
-  "description": "",
+  "description": "Website for the VirtuTV video consumption and monetization platform",
+  "main": "server.js",
   "scripts": {
     "build": "babel server.js -d build",
-    "start": "babel-node server.js",
+    "start": "node server.js",
     "dev": "nodemon --exec babel-node --presets es2015 server.js"
   },
   "babel": {
