--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "morgan": "1.8.2",
     "request": "2.81.0",
     "sendgrid": "5.1.1",
+    "serve-static": "1.12.3",
     "web3": "0.19.0"
   },
   "devDependencies": {
