--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "1.17.1",
     "chai": "4.0.2",
     "cookie-parser": "1.4.3",
+    "csurf": "1.9.0",
     "express": "4.15.3",
     "express-flash": "0.0.2",
     "express-handlebars": "3.0.0",
