--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "request": "2.81.0",
     "sendgrid": "5.1.1",
     "serve-static": "1.12.3",
+    "uuid": "3.1.0",
     "web3": "0.19.0"
   },
   "devDependencies": {
